# GsTutor

./: .gitignore  Cargo.toml  editor.rs  index.html  index.sass
css/: main.css
scss/: _variables.scss  main.scss
src/: list_component.rs  main.rs
