[package]
name = "gstutor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
wasm-logger = "0.2.0"
web-sys = "0.3.59"
yew = "0.19.3"
yew-hooks = "0.1.56"
yew-router = "0.16.0"
yew-stdweb = "0.18.0"
golfscript-rs = { path = "../golfscript-rs" }
